objects/Industry_Classification__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Parent_Industry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Industry</label>
        <referenceTo>Industry_Classification__c</referenceTo>
        <relationshipLabel>Industry Classifications</relationshipLabel>
        <relationshipName>Industry_Classifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <label>SIC Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Industry Classification</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Industry Classification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Industry Classifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>